2012-05-01  Jérôme Pasquier  <rainbru@free.fr>

	* src/tools/log_reader.rb: fix a bug preventing main window to appear.

	* src/LoggerOutputYaml.cpp: many output functinos now use the
	escape macro.
	* src/LoggerOutputYaml.cpp (_e): created a simple shortcut macro to
	Rpg::LoggerOutputYaml::escape().

2012-04-30  Jérôme Pasquier  <rainbru@free.fr>

	* src/LoggerOutputYaml.cpp: uses ObjectInspector accessors.
	* src/LoggerOutputTty.cpp: uses ObjectInspector accessors.
	* src/ObjectInspector.hpp: make all members private, accessed through
	accessors.

	* src/LoggerOutputYaml.cpp: uses ObjectAttribute accessors.
	* src/LoggerOutputTty.cpp: uses ObjectAttribute accessors.
	* src/ObjectAttribute.hpp: make all members private, accessed through
	accessors.

	* logger.spec.in: filename now prefixed with 'rainbrurpg-' to fix
	conflict with bsdutils' logger binary.
	* logger.texinfo: filename now prefixed with 'rainbrurpg-' to fix
	conflict with bsdutils' logger binary.
	* logger.1: filename now prefixed with 'rainbrurpg-' to fix
	conflict with bsdutils' logger binary.

2012-03-20  Jérôme Pasquier  <rainbru@free.fr>

	* configure.in: some checks move to the m4/ directory.

	* src/Logger.cpp (init): makes help messages for program options
	translatable.

2012-03-14  Jérôme Pasquier  <rainbru@free.fr>

	* src/LoggerOutputTty.cpp (logHeader): now using gettext.

	* src/LoggerOutputTty.hpp: remove 'using namespace std'.
	* src/LoggerOutputYaml.hpp: remove 'using namespace std'.
	* src/LoggerOutputFile.hpp: remove 'using namespace std'.
	* src/LoggerOutput.hpp: remove 'using namespace std'.
	* src/ObjectAttribute.hpp: remove 'using namespace std'.

2012-03-10  Jérôme Pasquier  <rainbru@free.fr>

	* configure.in: search for Boost.Format with AC_CHECK_HEADERS.

2012-03-08  Jérôme Pasquier  <rainbru@free.fr>

	* Makefile.am: remove multiple definition of EXTRA_DIST and
	man_MANS.

	* configure.in: added invocation to AM_GNU_GETTEXT and
	AM_GNU_GETTEXT_VERSION.
