@@ -44,6 +44,8 @@
 - [ ] see the log_reader.rb bug about the ErrorTrap#show_dialog cancel
       button
 **** TODO Continue Logger in src/logger
+     CLOCK: [2012-05-02 mer. 09:11]--[2012-05-02 mer. 09:34] =>  0:23
+     CLOCK: [2012-05-02 mer. 08:02]--[2012-05-02 mer. 08:43] =>  0:41
      CLOCK: [2012-05-01 mar. 09:51]--[2012-05-01 mar. 10:21] =>  0:30
      CLOCK: [2012-04-30 lun. 19:22]--[2012-04-30 lun. 20:09] =>  0:47
      CLOCK: [2012-04-30 lun. 17:15]--[2012-04-30 lun. 17:51] =>  0:36
@@ -136,4 +138,7 @@
       - [X] Is there a binary called logger ? NO
 - [X] Many members must be private
 - [X] Must escape some characters with double quotes (`, :) in YAML output
-- [ ] Must update texinfo for v1 YAML output
+- [-] Must update texinfo for v1 YAML output
+      - [X] Makes the manual logger-related (actually an autoproject skeleton)
+      - [ ] Present v1 YAML output (maybe in doc/texinfo/yaml-v1.tex)
+- [ ] src/example/logger-test does not handle commandline options correctly
